[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "terraink_py"
version = "0.6.1"
description = "Standalone Python CLI for generating styled OSM map posters as PNG and SVG."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.4.0",
  "Pillow>=10.4.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "black>=26.3.0",
  "prek>=0.3.4",
]

[project.scripts]
terraink = "terraink_py.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
terraink_py = ["data/*.json"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["terraink_py*"]

[tool.mypy]
[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true
